testdata/baselines/reference/submodule/conformance/callbackTag2.errors.txt
cb.js(8,12): error TS2304: Cannot find name 'Id'.
cb.js(19,14): error TS2339: Property 'id' does not exist on type 'SharedClass<S>'.
cb.js(22,12): error TS2304: Cannot find name 'SharedId'.
cb.js(25,12): error TS2304: Cannot find name 'Final'.


==== cb.js (4 errors) ====
    /** @template T
     * @callback Id
     * @param {T} t
     * @returns {T} Maybe just return 120 and cast it?
     */
    var x = 1
    
    /** @type {Id<string>} I actually wanted to write `const "120"` */
               ~~
!!! error TS2304: Cannot find name 'Id'.
    var one_twenty = s => "120";
    
    /** @template S
     * @callback SharedId
     * @param {S} ego
     * @return {S}
     */
    class SharedClass {
        constructor() {
            /** @type {SharedId<S>} */
            this.id;
                 ~~
!!! error TS2339: Property 'id' does not exist on type 'SharedClass<S>'.
        }
    }
    /** @type {SharedId<number>} */
               ~~~~~~~~
!!! error TS2304: Cannot find name 'SharedId'.
    var outside = n => n + 1;
    
    /** @type {Final<{ fantasy }, { heroes }>} */
               ~~~~~
!!! error TS2304: Cannot find name 'Final'.
    var noreturn = (barts, tidus, noctis) => "cecil"
    
    /**
     * @template V,X
     * @callback Final
     * @param {V} barts - "Barts"
     * @param {X} tidus - Titus
     * @param {X & V} noctis - "Prince Noctis Lucius Caelum"
     * @return {"cecil" | "zidane"}
     */
    